# robotics-arm

./: .gitignore  README.md  pyproject.toml
app/: cli.py  models.py
app/camera/: uvc_camera.py
app/robot/: driver.py  lewansoul_miniarm.py
app/runtime/: control_loop.py  demo_mode.py  hand_tracking_loop.py  hardware_discovery.py  stereo_hand_tracking_loop.py
app/vision/: gestures.py  hand_tracking.py  stereo_depth_hand_tracking.py
config/: hardware_paths.json
kids_robotics_gesture_control.egg-info/: SOURCES.txt  requires.txt
tests/: test_control_loop.py  test_demo_cli.py  test_gesture_classifier.py  test_hardware_discovery.py
